8222252: Java ergonomics limits heap to 128GB with disabled compressed oops

Reviewed-by: dholmes